[package]
name = "nom-openmetrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
assert_float_eq = "1.1.4"
rstest = "0.22.0"
