[package]
name = "nom-openmetrics"
description = "A prometheus and openmetrics parser"
version = "0.1.0"

categories = ["parser-implementations"]
documentation = "https://docs.rs/nom-openmetrics"
edition = "2021"
keywords = ["parser", "openmetrics", "prometheus", "nom"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/drbrain/nom-openmetrics"

[dependencies]
nom = "8"
nom-language = "0.1.0"
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
assert_float_eq = "1.1.4"
rstest = "0.24.0"

[[example]]
name = "parse"
crate-type = ["bin"]
